2024-10-15  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.9-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.9-alpha03: Palenque';git push
	git tag -a 5.2.9-alpha03 -m '';git push --tags

	* NCO 5.2.9-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.9-alpha02: Adieu Borrego';git push
	git tag -a 5.2.9-alpha02 -m 'ncclimo: fix bsh syn, fix eamxx pdq; ncks: S1D fix hst pft, add pft crd';git push --tags

	* Add PFT string coordinate to output files

	* Assume PFT storage order in history files is same as in restart files
	This shifts the original convention that worked with beth_in.nc to the newer eva_h2.nc convention

2024-10-14  Charlie Zender  <zender@uci.edu>

	* Define dmn_cnt_out before using it to determine lvl_nbr in nco_s1d.c:nco_s1d_unpack()

2024-10-02  Charlie Zender  <zender@uci.edu>

	* Fix typo pdq_opt='-a ilev,l%8jev,plev,dim2,ncol' that causes eamxx regridding to fail

2024-10-01  Charlie Zender  <zender@uci.edu>

	* Fix illegal Bash string->numeric conversion error with mm_endp1_sgm definition

2024-09-27  Charlie Zender  <zender@uci.edu>

	* Replace _FillValue by NC_FillValue in nco.h (verified on MacOS w/4.9.4-dev and Linux w/4.9.2)

2024-09-26  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.9-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.9-alpha01: Camp Rick';git push
	git tag -a 5.2.9-alpha01 -m 'Functionally identical to 5.2.8 + ECMWF IFS fixes';git push --tags

	* Update vertical interpolation regressions with ECMWF IFS documentaiton in nco.texi

	* Require --ps_nm=lnsp for ECMWF IFS hybrid coordinates

	* Fix vertical interpolation regressions with ECMWF IFS hybrid coordinates

2024-09-11  Charlie Zender  <zender@uci.edu>

	* Shift from clang++ -std=c++17 and clang to clang++ -std=c++23	and clang -std=c23 on MacOS

2024-09-02  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.8 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.8: Sitton Peak';git push